@@ -18,6 +18,11 @@ if it cannot it terminates.
 .TP 
 \fB\-h, \-\-help\fR
 Output the help information and exit.
+.TP
+\fB\-H, \-\-headers\fR
+Include all headers in the content of emails generated by clamav\-milter.
+This is useful for systems administrators who may want to look at headers
+to check if any of their machines are infected.
 .TP 
 \fB\-V, \-\-version\fR
 Print the version number and exit.
