@@ -1,3 +1,8 @@
+Mon Feb  9 11:09:56 GMT 2004 (njh)
+----------------------------------
+  * clamav-milter:	Added --headers patch from "Leonid Zeitlin"
+	<lz@europe.com>, though a lot of people have requested it!
+
 Mon Feb  9 02:04:36 CET 2004 (tk)
 ---------------------------------
   * freshclam: work-around for potential database downgrade (subtle problem
